--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tic-tac-toe",
   "version": "0.1.0",
-  "homepage": "https://github.com/claraferraz/tic-tac-toe-react",
+  "homepage": "https://claraferraz.github.io/tic-tac-toe-react/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
